Added scaffold for Plan, and improved a few things mostly in user model
