# config/routes.rb
@@ -3,7 +3,8 @@ Rails.application.routes.draw do
   mount Rswag::Api::Engine => '/api-docs'
   namespace :api do
     namespace :v1 do
-      post '/signup', to: 'users#create'
+      resources :plans
+          post '/signup', to: 'users#create'
       #  get 'users/index'
       #  delete 'users/:id/destroy'
       post   '/authenticate',   to: 'authentication#create'
